--- a/.env
+++ b/.env
@@ -3,11 +3,12 @@ ENV=develop
 REGION=ap-southeast-2
 TEXTRACT_ROLE_ARN=arn:aws:iam::990939205853:role/amplify-bpedsys-develop-1-ElastikTextractRoleCDKAA-1I9WOUS7WLT3Q
 TEXTRACT_TOPIC_ARN=arn:aws:sns:ap-southeast-2:990939205853:sns-topic-textractHandWriting-bpedsys-develop
-API_BPEDSYSGQL_GRAPHQLAPIENDPOINTOUTPUT=ttps://swoz4wfv4fevbmi2wayyzf5kjy.appsync-api.ap-southeast-2.amazonaws.com/graphql
+API_BPEDSYSGQL_GRAPHQLAPIENDPOINTOUTPUT=https://swoz4wfv4fevbmi2wayyzf5kjy.appsync-api.ap-southeast-2.amazonaws.com/graphql
 API_BPEDSYSGQL_GRAPHQLAPIIDOUTPUT=xuuhgbt2kzebrpxdv67rr5pmze
 BUCKET=bpedsysuserstorage174413-develop
 COGNITO_STUDENT_PASSWORD=/amplify/d31ul62nbvaagu/develop/AMPLIFY_WAMHandwritingProcessorFromTextract_COGNITO_STUDENT_PASSWORD
 AUTH_BPEDSYSAUTH_APPCLIENTIDWEB=65k24rpr15ii43qllc58riargu
-AUTH_BPEDSYSAUTH_USERPOOLID=ap-southeast-2_bjwWhJw4s
+# AUTH_BPEDSYSAUTH_USERPOOLIDdev=ap-southeast-2_bjwWhJw4s
 COGNITO_USERNAME=studentfaculty@bestperformancedevau
 AUTHENTICATION_KEY=/amplify/d31ul62nbvaagu/develop/AMPLIFY_bpedsysauthCreateAuthChallenge_AUTHENTICATION_KEY
+AUTH_BPEDSYSAUTH_USERPOOLID=ap-southeast-2_1whXi1H8I
