--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "axios": "^1.3.5",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "talisman": "^1.1.4"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
