--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.462.0",
+    "@aws-sdk/client-s3": "^3.462.0",
     "@aws-sdk/client-ssm": "^3.312.0",
     "@aws-sdk/credential-providers": "^3.306.0",
     "@aws-sdk/protocol-http": "^3.306.0",
     "@aws-sdk/signature-v4": "^3.306.0",
+    "@aws-sdk/util-dynamodb": "^3.462.0",
     "amazon-cognito-identity-js": "^6.2.0",
+    "axios": "^1.3.5",
     "cross-fetch": "^3.1.5",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "logform": "^2.5.1",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2",
-    "axios": "^1.3.5"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
-    "dotenv": "^16.0.1",
     "aws-sdk": "^2.1357.0",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1"
   }
 }
