--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ TEXTRACT_ROLE_ARN=arn:aws:iam::990939205853:role/amplify-bpedsys-develop-1-Elast
 TEXTRACT_TOPIC_ARN=arn:aws:sns:ap-southeast-2:990939205853:sns-topic-textractHandWriting-bpedsys-develop
 API_BPEDSYSGQL_GRAPHQLAPIENDPOINTOUTPUT=https://swoz4wfv4fevbmi2wayyzf5kjy.appsync-api.ap-southeast-2.amazonaws.com/graphql
 API_BPEDSYSGQL_GRAPHQLAPIIDOUTPUT=xuuhgbt2kzebrpxdv67rr5pmze
+API_BPEDSYSGQL_GRAPHQLAPIIDOUTPU=xuuhgbt2kzebrpxdv67rr5pmze
 BUCKET=bpedsysuserstorage174413-develop
 COGNITO_STUDENT_PASSWORD=/amplify/d31ul62nbvaagu/develop/AMPLIFY_WAMHandwritingProcessorFromTextract_COGNITO_STUDENT_PASSWORD
 AUTH_BPEDSYSAUTH_APPCLIENTIDWEB=65k24rpr15ii43qllc58riargu
