--- a/.env
+++ b/.env
@@ -1,10 +1,16 @@
-BUCKET_FOR_TEXTRACT=bpedsysuserstorage180834-testing
-ENV=testing
+BUCKET_FOR_TEXTRACT=bpedsysuserstorage174413-develop
+ENV=develop
 REGION=ap-southeast-2
-API_BPEDSYSGQL_GRAPHQLAPIENDPOINTOUTPUT=https://4nns2qmidzag5kb5kswkyoxovq.appsync-api.ap-southeast-2.amazonaws.com/graphql
-API_BPEDSYSGQL_GRAPHQLAPIIDOUTPUT=5dpmaank75aflipwqbt64zulzi
-API_BPEDSYSGQL_GRAPHQLAPIIDOUTPU=5dpmaank75aflipwqbt64zulzi
-BUCKET=bpedsysuserstorage180834-testing
-AUTH_BPEDSYSAUTH_APPCLIENTIDWEB=5vtfnipt4mbng3a0fib7r977ii
-ENV_SUFFIX=5dpmaank75aflipwqbt64zulzi
-USER_POOL=ap-southeast-2_NTLrrbV6u
+TEXTRACT_ROLE_ARN=arn:aws:iam::990939205853:role/amplify-bpedsys-develop-1-ElastikTextractRoleCDKAA-1I9WOUS7WLT3Q
+TEXTRACT_TOPIC_ARN=arn:aws:sns:ap-southeast-2:990939205853:sns-topic-textractHandWriting-bpedsys-develop
+API_BPEDSYSGQL_GRAPHQLAPIENDPOINTOUTPUT=https://swoz4wfv4fevbmi2wayyzf5kjy.appsync-api.ap-southeast-2.amazonaws.com/graphql
+API_BPEDSYSGQL_GRAPHQLAPIIDOUTPUT=xuuhgbt2kzebrpxdv67rr5pmze
+API_BPEDSYSGQL_GRAPHQLAPIIDOUTPU=xuuhgbt2kzebrpxdv67rr5pmze
+BUCKET=bpedsysuserstorage174413-develop
+COGNITO_STUDENT_PASSWORD=/amplify/d31ul62nbvaagu/develop/AMPLIFY_WAMHandwritingProcessorFromTextract_COGNITO_STUDENT_PASSWORD
+AUTH_BPEDSYSAUTH_APPCLIENTIDWEB=65k24rpr15ii43qllc58riargu
+COGNITO_USERNAME=studentfaculty@bestperformancedevau
+AUTHENTICATION_KEY=/amplify/d31ul62nbvaagu/develop/AMPLIFY_bpedsysauthCreateAuthChallenge_AUTHENTICATION_KEY
+AUTH_BPEDSYSAUTH_USERPOOLID=ap-southeast-2_bjwWhJw4s
+ENV_SUFFIX=xuuhgbt2kzebrpxdv67rr5pmze
+USER_POOL=ap-southeast-2_bjwWhJw4s
