--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/signature-v4": "^3.306.0",
     "@aws-sdk/util-dynamodb": "^3.462.0",
     "amazon-cognito-identity-js": "^6.2.0",
+    "talisman": "^1.1.4",
     "axios": "^1.3.5",
     "cross-fetch": "^3.1.5",
     "dayjs": "^1.11.7",
