--- a/package.json
+++ b/package.json
@@ -5,30 +5,33 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "@aws-crypto/sha256-js": "^5.0.0",
     "@aws-sdk/client-dynamodb": "^3.462.0",
     "@aws-sdk/client-s3": "^3.462.0",
     "@aws-sdk/client-ssm": "^3.312.0",
+    "@aws-sdk/credential-provider-node": "^3.405.0",
     "@aws-sdk/credential-providers": "^3.306.0",
     "@aws-sdk/protocol-http": "^3.306.0",
     "@aws-sdk/signature-v4": "^3.306.0",
     "@aws-sdk/util-dynamodb": "^3.462.0",
-    "@aws-crypto/sha256-js": "^5.0.0",
     "amazon-cognito-identity-js": "^6.2.0",
-    "@aws-sdk/credential-provider-node": "^3.405.0",
-    "talisman": "^1.1.4",
     "axios": "^1.3.5",
     "cross-fetch": "^3.1.5",
+    "d3": "^6.5.0",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
-    "d3": "^6.5.0",
     "logform": "^2.5.1",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2",
+    "node-fetch": "2",
     "pdf-lib": "^1.17.1",
-    "node-fetch": "2"
+    "talisman": "^1.1.4",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.699.0",
+    "@aws-sdk/util-retry": "^3.374.0",
     "@types/aws-lambda": "^8.10.92",
+    "@types/node": "^22.10.0",
     "aws-sdk": "^2.1357.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
@@ -38,6 +41,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "zod": "^3.23.8"
   }
 }
